--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <button class="nav-btn" data-page="search"><i class="fas fa-search"></i> Recherche</button>
         <button class="nav-btn" data-page="upcoming"><i class="fas fa-bolt"></i> Sorties 🔥</button>
         <button class="nav-btn" onclick="window.location.href='https://cx-banger.github.io/libopenshot/'"><i class="fas fa-video"></i> Vidéos</button>
+        <button class="nav-btn" onclick="window.location.href='https://cx-banger.github.io/wrapped/'"><i class="fa-solid fa-icons"></i> Wrapped 2025</button>
       </nav>
     </aside>
 
