--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <button class="nav-btn" onclick="window.location.href='https://cx-banger.github.io/libopenshot/'"><i class="fas fa-video"></i> Vidéos</button>
         <button class="nav-btn" onclick="window.location.href='wrapped/index.html'"><i class="fa-solid fa-icons"></i> Wrapped 25</button>
         <button class="nav-btn" onclick="window.location.href= 'https://www.bible.com/fr/verse-of-the-day/'"><i class="fa-solid fa-book-bible"></i> Verset du jour</button>
+        </br>
+        </br>        
+        <button class="nav-btn" onclick="window.location.href= '#'"><i class="fa-solid fa-file-contract"></i> CGU</button> 
         
   <!--  <button class="nav-btn" onclick="window.location.href= 'https://cx-banger.github.io/unordered_set/'"><i class="fa-solid fa-book-bible"></i> Verset du jour</button> -->
       </nav>
