--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <button class="nav-btn" onclick="window.location.href='https://cx-banger.github.io/authd.sdk/'"><i class="fas fa-video"></i> Vidéos</button>
         <button class="nav-btn" onclick="window.location.href='#'"><i class="fa-solid fa-icons"></i> Wrapped 25</button>
         <button class="nav-btn" onclick="window.location.href= 'https://www.bible.com/fr/verse-of-the-day/'"><i class="fa-solid fa-book-bible"></i> Verset du jour</button>
-        <button class="nav-btn" onclick="window.location.href= 'https://8080-imskpe8d2gkc4sq50tafe-2c4c292b.us1.manus.computer/login.php'"><i class="fa-solid fa-download"></i> Upload Music</button>
+        <button class="nav-btn" onclick="window.location.href= 'config-video.html'"><i class="fa-solid fa-download"></i> Upload Music</button>
+<!--    <button class="nav-btn" onclick="window.location.href= 'https://8080-imskpe8d2gkc4sq50tafe-2c4c292b.us1.manus.computer/login.php'"><i class="fa-solid fa-download"></i> Upload Music</button>  -->
         </br>
         </br>
         </br>
